feat: 增加 gtag 分析

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,7 +30,8 @@
     "md5": "^2.3.0",
     "sha.js": "^2.4.11",
     "js-base64": "^3.4.4",
-    "json-bigint": "^1.0.0"
+    "json-bigint": "^1.0.0",
+    "vue-gtag": "1.8.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
